@@ -163,8 +163,8 @@ class yafObject(object):
 
                 elif camType == "angular":
                     yi.paramsSetBool("circular", camera.circular)
-                    yi.paramsSetBool("orthographic", camera.orthographic)
                     yi.paramsSetBool("mirrored", camera.mirrored)
+                    yi.paramsSetString("projection", camera.angular_projection)
                     yi.paramsSetFloat("max_angle", camera.max_angle)
                     yi.paramsSetFloat("angle", camera.angular_angle)
 
